jEdit properties. The default properties of Isabelle/jEdit usually
prefer scalable icons over fixed old bitmaps, but some notable icons are
not available as SVG.


*** Pure ***

* Command 'thy_deps' expects optional theory arguments as long theory
names, the same way as the 'imports' clause. Minor INCOMPATIBILITY.


*** HOL ***

* Consolidated auxiliary operations intended for code generation:

    const Set.is_empty
    thm is_empty_def ~> Set.is_empty_iff [simp]

    const Set.remove
    thm remove_def ~> Set.remove_eq [simp]

    const Set.filter
    thm filter_def ~> Set.filter_eq [simp]

    const [List.]can_select ~> Set.can_select
    thm can_select_def ~> Set.can_select_iff [simp]

    const member ~> List.member
    thm member_def ~> List.member_iff [simp]

    const null ~> List.null
    thm null_def ~> List.null_iff [simp]

    const List.all_interval_nat List.all_interval_int
    discontinued in favour of a generic List.all_range

    const List.Bleast
    discontinued in favour of more concise Lattices_Big.Least

    const [List.]map_tailrec ~> List.map_tailrec
    thm List.map_tailrec_eq [simp]

    const [List.]gen_length ~> List.length_tailrec
    thm List.length_tailrec_eq [simp]

    const [List.]maps ~> List.maps
    thm maps_def ~> List.maps_eq [simp]

    const [List.]map_project ~> Option.image_filter
    thm map_project_def ~> Option.image_filter_eq

The _def suffix for characteristic theorems is avoided to emphasize that
these auxiliary operations are candidates for unfolding since they are
variants of existing logical concepts. The [simp] declarations try to
move the attention of the casual user away from these auxiliary
operations; if they expose problems in existing applications, they can
be removed using [simp del] – the regular theory merge will make sure
that this deviant setup will not persist in bigger developments.
INCOMPATIBILITY.

* ML bindings for theorems Ball_def, Bex_def, CollectD, CollectE,